# tiny-blarney

./: .envrc  Makefile  TinyBlarney-Backends-CodeGeneration-SMT.html  TinyBlarney-Backends-CodeGeneration-Verilog.html  TinyBlarney-Backends-Simulation-Haskell.html  TinyBlarney-Backends-Simulation-SimulatorBuild.html  TinyBlarney-Backends-Simulation-Types.html  TinyBlarney-Backends-Simulation-Verilator-Communication.html  TinyBlarney-Backends-Simulation-Verilator-GenTop.html  TinyBlarney-Backends-Simulation-Verilator.html  TinyBlarney-Backends-Verification-SMT.html  TinyBlarney-Backends.html  TinyBlarney-Core-BV.html  TinyBlarney-Core-BasicTypes.html  TinyBlarney-Core-Bit.html  TinyBlarney-Core-Bits.html  TinyBlarney-Core-BuildCircuit.html  TinyBlarney-Core-CircuitInterface.html  TinyBlarney-Core-FlattenBV.html  TinyBlarney-Core-NetHelpers.html  TinyBlarney-Core.html  TinyBlarney-Misc-Misc.html  TinyBlarney-Misc-PrettyHelpers-C.html  TinyBlarney-Misc-PrettyHelpers-Verilog.html  TinyBlarney.hs  TinyBlarney.html  TinyBlarneyTest.hs  doc-index-36.html  doc-index-58.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  (+14 more)
.github/workflows/: documentation.yml
example/simple_adder/: Main.hs
example/simple_and_or/: Main.hs  Makefile
src/: TinyBlarney.hs
src/TinyBlarney/: Backends.hs  Core.hs
src/TinyBlarney/Backends/: Verilog.hs
src/TinyBlarney/Backends/CodeGeneration/: SMT.hs  Verilog.hs
src/TinyBlarney/Backends/PrettyHelpers/: C.hs
src/TinyBlarney/Backends/Simulation/: Haskell.hs  SimulatorBuild.hs  SimulatorTypes.hs  Types.hs  Verilator.hs
src/TinyBlarney/Backends/Simulation/Verilator/: Communication.hs  GenTop.hs
src/TinyBlarney/Backends/Verification/: SMT.hs
src/TinyBlarney/Core/: BV.hs  BasicTypes.hs  Bit.hs  Bits.hs  BuildCircuit.hs  CircuitInterface.hs  FlattenBV.hs  Misc.hs  NetHelpers.hs  NetPrimitives.hs
src/TinyBlarney/Misc/: Misc.hs
src/TinyBlarney/Misc/PrettyHelpers/: C.hs  Verilog.hs
src/backends-resources/Verilator/: simulator_interface_helpers.c  simulator_interface_helpers.h
tests/TinyBlarney/: Tests.hs
tests/TinyBlarney/Tests/SimpleAdder/: Test.hs
tests/TinyBlarney/Tests/SimpleAndOr/: Test.hs
tests/TinyBlarney/Tests/SimpleDelay/: Test.hs
tests/TinyBlarney/Tests/SimpleMerge/: Test.hs
